--- a/static/style/style_goal.css
+++ b/static/style/style_goal.css
@@ -9,12 +9,11 @@ header {
     font-family: 'Comfortaa', sans-serif;
     position: fixed;
     width: 100%;
-    max-width: 1920px;
     height: 100px;
     color: transparent; /* Текст невидим, пока не применен фон */
     text-align: left;
     padding: 0 1rem;
-    padding-left: 200px;
+    padding-left: 20px; /* Уменьшен отступ для мобильных устройств */
     line-height: 100px;
     box-shadow: 0 2px 4px rgba(5, 0, 8, 0.1);
     box-sizing: border-box;
@@ -22,71 +21,34 @@ header {
     display: flex; /* Включает Flexbox */
     align-items: center; /* Вертикальное выравнивание */
     justify-content: space-between; /* Распределяет элементы по краям */
-    position: relative; /* Для псевдоэлемента */
-    z-index: 1000; /* Обеспечивает, чтобы заголовок был поверх остального содержимого */
-}
-
-.header-text {
-    background: linear-gradient(180deg, #8E76F2 13.39%, #A1BDFF 78.57%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
 }
 
 header::before {
     content: 'alamio'; /* Или другой текст, который вы хотите отобразить */
-    font-size: 50px;
+    font-size: 40px; /* Размер шрифта уменьшен для мобильных устройств */
     font-family: 'Comfortaa', sans-serif;
     color: transparent;
     background: linear-gradient(180deg, #8E76F2 13.39%, #A1BDFF 78.57%);
     -webkit-background-clip: text;
     background-clip: text;
     position: absolute;
-    left: 200px;
+    left: 20px; /* Уменьшен отступ для мобильных устройств */
     top: 0;
     height: 100px;
     line-height: 100px;
-}
-
-main {
-    background-color: #E2E4FF; /* Светло-серый фон для основного содержимого */
-    padding: 20px; /* Отступы внутри основного содержимого */
 }
 
 .lang-or-theme {
     display: flex; /* Размещаем элементы в строку */
     align-items: center; /* Вертикальное выравнивание */
     margin-left: auto; /* Перемещает контейнер вправо */
-    padding-right: 200px; /* Дополнительное пространство справа */
-}
-
-.language-button {
-    background: white; /* Заливка внутри кнопки */
-    border: 2px solid #5C61A9;
-    font-size: 15px; /* Размер шрифта */
-    padding: 15px 10px; /* Размеры кнопки */
-    cursor: pointer; /* Курсор указывает на кнопку */
-    border-radius: 28px; /* Закругление углов */
-    outline: none; /* Убирает стандартное обводку при фокусе */
-    transition: background 0.3s, color 0.3s; /* Плавный переход для эффектов */
-    padding-left: 15px;
-    line-height: 1; /* Исправлено значение line-height */
-    position: relative; /* Для позиционирования псевдоэлемента */
-}
-
-.language-button i {
-    margin-left: 30px; /* Перемещает кнопку вправо */
-}
-
-.language-button:hover {
-    background: black; /* Фон кнопки при наведении */
-    color: white; /* Цвет текста при наведении */
+    padding-right: 20px; /* Уменьшен отступ для мобильных устройств */
 }
 
 .theme-button {
     background: none; /* Убираем фон */
     border: none; /* Убираем границу */
-    font-size: 35px; /* Размер шрифта для иконки */
+    font-size: 40px; /* Размер шрифта уменьшен для мобильных устройств */
     cursor: pointer; /* Курсор указывает на кнопку */
     transition: color 0.3s; /* Плавный переход для изменения цвета */
     outline: none; /* Убираем обводку при фокусе */
@@ -98,9 +60,9 @@ main {
 }
 
 .registration-title {
-    padding-top: 80px;
+    padding-top: 120px;
     font-family: 'Comfortaa', sans-serif;
-    font-size: 40px;
+    font-size: 35px;
     line-height: 52.41px;
     text-align: center;
     color: #5C61A9;
@@ -119,47 +81,53 @@ main {
     padding-top: 30px;
     display: flex;
     flex-direction: column;
-    max-width: 680px; /* Максимальная ширина группы полей ввода */
+    max-width: 700px; /* Увеличена максимальная ширина группы полей ввода */
     margin: 0 auto; /* Центрирование по горизонтали */
 }
 
-.form-group label {
+.square-one, .square-two, .square-three {
+    position: relative; /* Для абсолютного позиционирования круга */
     color: #5C61A9;
-    font-size: 14px;
-}
-
-.input-container {
-    position: relative; /* Позиционирование для дочерних элементов */
-    width: 100%; /* Ширина контейнера по ширине родительского элемента */
-}
-
-.form-input {
-    padding: 8px; /* Отступ справа для значка */
+    height: 100px; /* Высота квадрата увеличена */
+    background-color: white; /* Цвет фона квадрата */
     border: 2px solid #8E76F2;
-    border-radius: 8px;
-    font-size: 16px; /* Увеличение размера шрифта для лучшего чтения */
-    width: 100%; /* Ширина поля ввода в пределах родительского контейнера */
+    border-radius: 20px;
+    width: 90%; /* Ширина квадрата */
     box-sizing: border-box; /* Учитывает границы и отступы в ширину элемента */
-    margin-bottom: 10px; /* Отступ между полями ввода */
-    padding-right: 35px; /* Дополнительный отступ для значка */
+    margin-bottom: 20px; /* Отступ снизу */
+    padding-right: 50px; /* Добавлен отступ справа для размещения кружка */
 }
 
-.form-input::placeholder {
-    color: #9B9B9B; /* Цвет текста в placeholder */
+.text-one, .text-two {
+    margin: 0; /* Убираем стандартные отступы */
+    padding-left: 20px; /* Отступ слева для смещения текста вправо */
 }
 
-.form-input:focus {
-    border-color: #8E76F2; /* Цвет обводки при фокусе */
-    outline: none; /* Убирает стандартную обводку при фокусе */
+.text-one {
+    font-size: 16px; /* Размер шрифта */
+    padding-top: 10px; /* Отступ сверху */
+    font-weight: bold; /* Жирный текст */
 }
 
-.location-icon {
-    position: absolute; /* Абсолютное позиционирование относительно контейнера */
-    right: 10px; /* Отступ справа от границы поля ввода */
-    top: 45%; /* Вертикальное центрирование */
-    transform: translateY(-50%); /* Центрирование по вертикали */
-    font-size: 17px; /* Размер значка */
-    color: #8E76F2; /* Цвет значка */
+.text-two {
+    font-size: 14px; /* Размер шрифта */
+    padding-top: 0; /* Отступ сверху */
+    margin-top: 14px; /* Отрицательный отступ сверху */
+}
+
+.circle-true, .circle-false {
+    position: absolute;
+    top: 15px;
+    right: 15px; /* Расположение кружка на внутреннем правом краю квадрата */
+    font-size: 30px;
+    background: linear-gradient(180deg, #8E76F2 13.39%, #A1BDFF 78.57%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+.circle-false {
+    color: #8E76F2;
 }
 
 .next-page {
@@ -174,6 +142,7 @@ main {
     background: linear-gradient(100deg, #8E76F2 13.39%, #A1BDFF 78.57%);
     display: block; /* Устанавливаем кнопку как блочный элемент */
     margin: 10px auto; /* Выровнять по центру с меньшим отступом сверху */
+    width: 90%; /* Ширина кнопки по содержимому */
 }
 
 .next-page:focus {
@@ -181,34 +150,21 @@ main {
     outline: none; /* Убирает стандартную обводку при фокусе */
 }
 
-.suggestions-container {
-    position: absolute;
-    z-index: 1000; /* Выше других элементов */
-    background: white;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    width: calc(100% - 20px); /* Ширина с учетом отступов */
-    max-height: 200px; /* Максимальная высота */
-    overflow-y: auto; /* Вертикальная прокрутка при переполнении */
+/* Темная тема */
+.dark-theme {
+    background-color: #282E33; /* Цвет фона для body и main */
+    color: #E2E4FF; /* Цвет текста для темной темы */
 }
 
-.suggestions-container a {
-    display: block;
-    padding: 8px;
-    color: #333;
-    text-decoration: none;
+.dark-theme header {
+    background-color: #18191D; /* Фон заголовка для темной темы */
 }
 
-.suggestions-container a:hover {
-    background: #f5f5f5;
+.dark-theme .square-one, .dark-theme .square-two, .dark-theme .square-three {
+    background-color: #18191D; /* Темный фон для квадратов */
+    border-color: #555; /* Цвет границы для квадратов в темной теме */
 }
 
-#auto-fill-button {
-    margin-top: 10px; /* Отступ сверху */
-    display: flex;
-    align-items: center;
-}
-
-#auto-fill-button i {
-    font-size: 20px; /* Размер иконки */
+.theme-button.dark-mode i {
+    color: white; /* Белый цвет значка для темной темы */
 }
