--- a/users/templates/about.html
+++ b/users/templates/about.html
@@ -1,4 +1,4 @@
-<div id='UserAbout' class="modal about-user-account-container" style='{% if user.theme %}background:#282e33; color: #333;{% endif %}'>
+<div id='UserAbout' class="modal about-user-account-container">
         <div class="header-about-user-container">
             <span class="header-text-about">Обо мне</span>
             <i class="bi bi-x cross-icon" onclick="CloseUserAbout()"></i>
