--- a/users/templates/detail_profile.html
+++ b/users/templates/detail_profile.html
@@ -1,4 +1,4 @@
-<div id='UserDetailProfile' class="container-fluid" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
+<div id='UserDetailProfile' class="container-fluid">
         <div class="row no-gutters h-100">
             <!-- Левая колонка с фото -->
             <div class="col-md-6 d-flex justify-content-center align-items-center user-image-container">
