--- a/users/templates/height_user.html
+++ b/users/templates/height_user.html
@@ -1,4 +1,4 @@
-<div id='UserHeight' class="height-user-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
+<div id='UserHeight' class="height-user-container">
     <div class="header-height-user-container d-flex justify-content-center align-items-center">
         <span class="header-text-about text-center">Рост</span>
         <i class="bi bi-x close-user-height position-absolute" onclick="CloseUserHeight()"></i>
