--- a/users/templates/prem_tariff_popup.html
+++ b/users/templates/prem_tariff_popup.html
@@ -1,4 +1,4 @@
-<div id="ActivatePremium" class="detail-activate-premium-container" style='{% if user.theme %}background:#282e33; color: #333;{% endif %}'>
+<div id="ActivatePremium" class="detail-activate-premium-container">
     <div class="modal-container">
         <div class="header-text-page-tariff">
             Перейти на Alamio Premium
