--- a/static/style/info_user.css
+++ b/static/style/info_user.css
@@ -1,4 +1,11 @@
+body.no-scroll {
+    overflow: hidden; /* Отключаем прокрутку */
+    position: fixed; /* Устанавливаем фиксированное положение */
+    width: 100%; /* Устанавливаем ширину в 100% */
+}
+
 .change-user-information-container {
+    transform: translate(-50%, -50%); /* Центрирование по вертикали и горизонтали */
     color: #5C61A9;
     background: #FFFFFF;
     padding: 25px;
@@ -6,12 +13,15 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 650px;
     width: 90%;
-    position: fixed; /* Keep fixed to stay in view */
-    height: 75vh; /* Adjust height based on content */
-    overflow-y: auto; /* Scroll if content overflows */
+    position: fixed; /* Должно быть фиксированное для отображения над контентом */
+    height: 70vh; /* Измените высоту на авто, если контент изменяется */
+    overflow-y: auto; /* Скролл при необходимости */
     z-index: 1050;
-    display: none; /* Hide modal by default */
+    display: none; /* Скрыто по умолчанию */
+    top: 50%;
+    left: 50%;
 }
+
 
 .change-user-information-container.show {
     display: block;
@@ -62,6 +72,16 @@
     position: relative;
 }
 
+.input-container input::placeholder {
+    color: #5C61A9;
+}
+
+.input-container .calender-icon {
+    color: #5C61A9;
+    font-size: 25px;
+    right: 15px;
+}
+
 .input-container i {
     position: absolute;
     right: 10px; /* Отступ справа */
@@ -94,7 +114,6 @@
 }
 
 .user-input-gender {
-    margin: 5px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -218,11 +237,11 @@
     pointer-events: none;
 }
 
-.input-container.error input {
-    border: 2px solid red; /* Толстая красная граница для ошибок */
+ #date-error {
+    color: red;
+    display: none;
 }
 
-.input-container.error .icon {
-    color: red; /* Меняем цвет иконки при ошибке */
+.error-border {
+    border: 1px solid red;
 }
-
