--- a/static/style/style-profile.css
+++ b/static/style/style-profile.css
@@ -22,8 +22,9 @@ header {
 }
 
 .settings-icon {
+    left: 125px;
     font-size: 40px;
-    top: 10px;
+    top: 5px;
     position: absolute;
     transform: translateX(250%);
 }
@@ -47,16 +48,16 @@ header {
     object-fit: cover;
 }
 
-.name-and-user, .age-user {
+.name-and-user {
     color: #5C61A9;
-    font-size: 30px;
     font-family: 'Comfortaa', sans-serif;
     font-weight: 500;
+    font-size: 20px;
 }
 
 .search-love  {
     color: #5C61A9;
-    height: 75px;
+    height: 70px;
     background-color: #E2E4FF;
     border: 2px solid #5C61A9;
     border-radius: 20px;
@@ -64,7 +65,7 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 70%; /* Сделаем ширину блоков более адаптивной */
+    width: 90%; /* Сделаем ширину блоков более адаптивной */
     margin: 30px auto;
     /* margin-left: 300px; Центрирование блока */
 }
@@ -117,7 +118,7 @@ header {
     color: #5C61A9;
     font-size: 25px;
     text-align: center;
-    margin: 20px auto; /* Центрирование и отступ */
+    margin: 5px auto; /* Центрирование и отступ */
 }
 
 .view-gallery {
@@ -281,25 +282,25 @@ header {
 }
 
 
-.footer-strip {
-    position: fixed; /* Фиксированное позиционирование */
-    bottom: 0; /* Привязка к нижней части экрана */
-    width: 100%; /* Ширина на всю ширину экрана */
-    height: 60px;
+.footer {
     background-color: white;
-    border-top: 1px solid #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 25px;
-    z-index: 1000; /* Убедитесь, что футер находится поверх других элементов */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.container-svg-page {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
 
-
-
-@media(max-width: 360px) {
-    body {
-        height: 4150px;
-    }
+.container-svg-page svg {
+    width: 35px;
+    height: 35px;
 }
