--- a/static/style/style_personal.css
+++ b/static/style/style_personal.css
@@ -5,16 +5,15 @@ body {
 }
 
 header {
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Comfortaa', sans-serif;
     position: fixed;
     width: 100%;
     max-width: 1920px;
     height: 100px;
-    color: transparent;
     text-align: left;
     padding: 0 1rem;
-    padding-left: 200px;
+    padding-left: 20px; /* Adjusted padding for alamio */
     line-height: 100px;
     box-shadow: 0 2px 4px rgba(5, 0, 8, 0.1);
     box-sizing: border-box;
@@ -22,78 +21,58 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
+    top: 0; /* Ensures header is at the top */
+    left: 0;
+    z-index: 1000; /* Ensures header is on top of other content */
 }
 
 header::before {
     content: 'alamio';
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Comfortaa', sans-serif;
     color: transparent;
     background: linear-gradient(180deg, #8E76F2 13.39%, #A1BDFF 78.57%);
     -webkit-background-clip: text;
     background-clip: text;
     position: absolute;
-    left: 200px;
+    left: 20px; /* Adjusted position for alamio */
     top: 0;
     height: 100px;
     line-height: 100px;
-}
-
-main {
-    background-color: #E2E4FF;
-    padding: 20px;
 }
 
 .lang-or-theme {
     display: flex;
     align-items: center;
     margin-left: auto;
-    padding-right: 200px;
-}
-
-.language-button {
-    background: white;
-    border: 2px solid #5C61A9;
-    font-size: 15px;
-    padding: 15px 10px;
-    cursor: pointer;
-    border-radius: 28px;
-    outline: none;
-    transition: background 0.3s, color 0.3s;
-    padding-left: 15px;
-    line-height: 1;
-    position: relative;
-}
-
-.language-button i {
-    margin-left: 30px;
-}
-
-.language-button:hover {
-    background: black;
-    color: white;
+    padding-right: 20px; /* Adjusted padding for the theme icon */
 }
 
 .theme-button {
-    background: none; /* Убираем фон */
-    border: none; /* Убираем границу */
-    font-size: 25px; /* Размер шрифта уменьшен для мобильных устройств */
-    cursor: pointer; /* Курсор указывает на кнопку */
-    transition: color 0.3s; /* Плавный переход для изменения цвета */
-    outline: none; /* Убираем обводку при фокусе */
-    margin-left: 5px;
+    background: none;
+    border: none;
+    font-size: 40px;
+    cursor: pointer;
+    transition: color 0.3s;
+    outline: none;
+}
+
+.theme-button.light-theme i {
+    color: #000; /* Цвет иконки для светлой темы */
+}
+
+.theme-button.dark-theme i {
+    color: #fff; /* Цвет иконки для темной темы */
 }
 
 .theme-button:focus {
     outline: none;
+    border: none;
 }
 
 .registration-title {
-    padding-top: 120px;
     font-family: 'Comfortaa', sans-serif;
-    font-size: 40px;
-    line-height: 52.41px;
+    font-size: 30px;
     text-align: center;
     color: #5C61A9;
     max-width: 800px;
@@ -104,7 +83,7 @@ main {
     color: #5C61A9;
     font-size: 13px;
     text-align: center;
-}   
+}
 
 .form-group {
     padding-top: 30px;
@@ -112,6 +91,11 @@ main {
     flex-direction: column;
     max-width: 680px;
     margin: 0 auto;
+    border: 2px solid #8E76F2; /* Increased border width to 4px */
+    border-radius: 10px; /* Increased border radius for more rounded corners */
+    padding: 30px; /* Increased padding inside the border */
+    background-color: transparent;
+    height: 680px;
 }
 
 .form-group label {
@@ -124,13 +108,14 @@ main {
     width: 100%;
 }
 
-.form-input {
+.form-input, .form-input_gender, .form-input_genders, .form-input_interested {
     padding: 8px;
-    border: 2px solid #8E76F2;
+    border: 3px solid #8E76F2; /* Increased border width by 1px */
     border-radius: 8px;
     font-size: 16px;
     width: 100%;
     box-sizing: border-box;
+    background-color: white; /* Set background color to white */
     margin-bottom: 40px;
 }
 
@@ -152,27 +137,6 @@ main {
     color: #8E76F2;
 }
 
-.form-input_gender, .form-input_genders, .form-input_interested {
-    padding: 8px;
-    border: 2px solid #8E76F2;
-    border-radius: 8px;
-    font-size: 16px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.form-input_gender {
-    margin-bottom: 15px;
-}
-
-.form-input_genders {
-    margin-bottom: 30px;
-}
-
-.form-input_interested {
-    margin-bottom: 15px;
-}
-
 .input-container-gender, .input-container-interested {
     display: flex;
     flex-direction: column;
@@ -190,7 +154,6 @@ main {
     transform: translateY(-50%);
     font-size: 26px;
     color: #8E76F2;
-    
 }
 
 .selected-icon {
@@ -213,6 +176,9 @@ main {
     background: linear-gradient(100deg, #8E76F2 13.39%, #A1BDFF 78.57%);
     display: block;
     margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .next-page:focus {
@@ -220,109 +186,20 @@ main {
     outline: none;
 }
 
-/* Медиазапросы для мобильных устройств */
-@media (max-width: 768px) {
-    header {
-        font-size: 30px;
-        height: 80px;
-        line-height: 80px;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
-    header::before {
-        font-size: 30px;
-        left: 20px;
-        height: 80px;
-        line-height: 80px;
-    }
-
-    .lang-or-theme {
-        padding-right: 20px;
-    }
-
-    .language-button {
-        font-size: 12px;
-        padding: 10px 8px;
-    }
-
-    .theme-button {
-        font-size: 25px;
-    }
-
-    .registration-title {
-        font-size: 30px;
-        padding-top: 90px;
-    }
-
-    .code-title {
-        font-size: 11px;
-    }
-
-    .form-group {
-        padding-top: 20px;
-        max-width: 90%;
-    }
-
-    .form-input {
-        font-size: 14px;
-    }
-
-    .next-page {
-        font-size: 16px;
-        padding: 10px 50px;
-    }
+main {
+    padding-top: 120px; /* Adjusted to account for header height */
 }
 
-@media (max-width: 480px) {
-    header {
-        font-size: 25px;
-        height: 60px;
-        line-height: 60px;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+.input-container-gender .form-control,  .input-container-interested .form-control, .form-group .form-control {
+    background-color: transparent;
+    border: 2px solid #8E76F2; /* Increased border width by 1px */
+}
 
-    header::before {
-        font-size: 25px;
-        left: 10px;
-        height: 60px;
-        line-height: 60px;
-    }
+.form-control.error {
+    border-color: red;
+}
 
-    .lang-or-theme {
-        padding-right: 10px;
-    }
-
-    .language-button {
-        font-size: 10px;
-        padding: 8px 5px;
-    }
-
-    .theme-button {
-        font-size: 20px;
-    }
-
-    .registration-title {
-        font-size: 25px;
-        padding-top: 70px;
-    }
-
-    .code-title {
-        font-size: 10px;
-    }
-
-    .form-group {
-        padding-top: 15px;
-        max-width: 90%;
-    }
-
-    .form-input {
-        font-size: 12px;
-    }
-
-    .next-page {
-        font-size: 14px;
-        padding: 8px 40px;
-    }
+.input-container.error {
+    border: 1px solid red;
+    border-radius: 0.25rem; /* For consistency with Bootstrap */
 }
