--- a/users/templates/info_user.html
+++ b/users/templates/info_user.html
@@ -1,6 +1,4 @@
-{% load custom_filters %}
-
-<div id="ChangeUser" class='change-user-information-container' style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
+<div id="ChangeUser" class='change-user-information-container'>
     <div class="modal-container">
         <div class="header-text d-flex justify-content-between align-items-center">
             Основное
@@ -19,9 +17,11 @@
         <div class="input-group">
             <label for="age">Дата рождения</label>
             <div class="input-container">
-                <input type="date" id="age" class="form-control" value="{{ user.bidth|date:'Y-m-d' }}" min="1900-01-01" max="2024-01-01" required>
+                <input placeholder='дд.мм.гг' id="age" class="form-control" value="{{ user.bidth|date:'d.m.Y' }}" min="1900-01-01" max="2024-01-01" required>
+                <i class="bi bi-calendar-event calender-icon"></i>
             </div>
         </div>
+        <div id="date-error">Введите правильную дату в формате дд.мм.гггг</div>
     </div>
 
     <div class="user-input-gender">
@@ -43,7 +43,6 @@
             <input type="text" id="city" class="form-control" value='{{ user.city }}'>
             <i class="bi bi-geo-alt geo-icon"></i>
         </div>
-        <div id="suggestions" class="suggestions-container"></div>
     </div>
 
     <div class="user-target-container">
