--- a/users/templates/interested.html
+++ b/users/templates/interested.html
@@ -1,23 +1,23 @@
-<div id='UserInterested' class="interested-user-account-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
-        <div class="user-interested-header">
-            <span class="header-text-interests">Интересы</span>
-            <i class="bi bi-x close-interested" onclick='CloseUserInterested()'></i>
+<div id='UserInterested' class="interested-user-account-container">
+    <div class="user-interested-header">
+        <span class="header-text-interests">Интересы</span>
+        <i class="bi bi-x close-interested" onclick='CloseUserInterested()'></i>
+    </div>
+    <div class="user-search-container">
+        <label for="text">Покажи, что тебе нравиться</label>
+        <div class="input-container-interested">
+            <input type="text" id="interests-input" placeholder="Введите интерес">
+            <i class="bi bi-search search-icon"></i>
+            <!-- Контейнер для рекомендаций -->
+            <div id="suggestions-container" class="suggestions-container"></div>
         </div>
-        <div class="user-search-container">
-            <label for="text">
-                Покажи, что тебе нравиться
-            </label>
-            <div class="input-container-interested">
-                <input type="text">
-                <i class="bi bi-search search-icon"></i>
-            </div>
-            <div class="user-actual-search-container">
-                <span>Велоспорт</span>
-                <span>Саморазвитие</span>
-                <span>Музыка</span>
-            </div>
-        </div>
-        <div class="save-user-interesteds-container">
-            <button class="save-interested-user">Сохранить</button>
+        <div class="user-actual-search-container">
+            <span>Велоспорт</span>
+            <span>Саморазвитие</span>
+            <span>Музыка</span>
         </div>
     </div>
+    <div class="save-user-interesteds-container">
+        <button class="save-interested-user">Сохранить</button>
+    </div>
+</div>
